--- a/src/style.css
+++ b/src/style.css
@@ -9,32 +9,13 @@ body {
     position: relative;
 }
 
-#background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0 0 0 / 40%);
-    transform: scale(0);
+.hide {
+    display: none;   
 }
 
-#background.active {
-    transform: scale(1);
-}
-
-form {
-    width: 400px;
-    height: max-content; 
-    background-color: white;
-    position: fixed;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    transition: 0.2s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 10px;
-    border-radius: 16px;
-}
+/*
+order projects based on duedate on home
+create today and this week tabs
+add form validation
+add confirm changes on enterkey pressed
+*/
