--- a/src/style.css
+++ b/src/style.css
@@ -2,19 +2,224 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 0;
+}
+
+button, img, input[type='checkbox'], select, option {
+    cursor: pointer;
+}
+
+#date {
+    cursor: text;
+}
+
+input::-webkit-calendar-picker-indicator {
+    cursor: pointer;
 }
 
 body {
     position: relative;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
 
-.hide {
-    display: none;   
+#sidebar {
+    display: grid;
+    padding: 10%;
+    gap: 10px;
 }
+
+#sidebar > button {
+    padding: 0 15px;
+    width: 100%;
+    text-align: left;
+    font-size: large;
+    font-weight: bold;
+    height: 50px;
+}
+
+#sidebar > h3 {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.project, .project div {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 50px;
+    width: 100%;
+}
+
+.project div {
+    width: 125%;
+}
+
+.project button:first-child, .project div input:first-child {
+    text-align: left;
+    padding-left: 10px;
+    grid-row: 1/3;
+    width: 100%;
+    overflow-x: auto;
+    font-size: large;
+    font-weight: bold;
+}
+
+.project .edit, .project .delete, .project div button {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+img {
+    width: min(25px, 100%);
+    height: min(25px, 100%);
+}
+
+#add-project {
+    font-weight: normal;
+}
+
+button:hover {
+    background-color: rgb(0 0 0 / 30%);
+}
+
+#display {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 30px 20px;
+}
+
+#display h3 {
+    height: 80px;
+    text-align: center;
+    padding: 20px;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+.todo {
+    display: flex;
+    border: 1px solid;
+    height: max-content;
+    gap: 1rem;
+    padding: 2px 1rem;
+    align-items: center;
+}
+
+.todo .buttons {
+    position: relative;
+}
+
+.todo .name {
+    overflow-x: hidden;
+}
+
+.todo button {
+    width: fit-content;
+    margin-left: 4px;
+}
+
+.todo .date {
+    margin-left: auto;
+}
+
+#move-form {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%) translateY(-30%);
+    display: grid;
+    padding: 10%;
+    gap: 5px;
+    width: 15vw;
+    max-height: 50vh;
+    overflow-y: auto;
+}
+
+#move-form * {
+    width: 100%;
+    font-size: large;
+    overflow-x: hidden;
+    height: 2rem;
+    text-align: left;
+    padding-left: 3px;
+    margin-left: 0;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    border: 1px solid black;
+    gap: 5px;
+}
+
+#new-todo {
+    padding: 2px 1rem; 
+}
+
+form div {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 2px;
+    gap: 4px;
+}
+
+#description-div {
+    grid-column: 1/-1;
+}
+
+#description {
+    resize: none;
+}
+
+form .buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    grid-column: 1/-1;
+}
+
+form .buttons button {
+    margin-left: 0;
+}
+
+label {
+    font-weight: bold;
+}
+
+#priority {
+    height: 100%;
+}
+
+.instructions {
+    font-size: small;
+    color: red;
+}
+
+#add-todo {
+    text-align: start;
+    padding-left: 1rem;
+    font-size: larger;
+    font-weight: bolder;
+}
+
+#add-todo::after {
+    font-size: medium;
+    content: '  Add todo';
+    font-weight: normal;
+}
+
+.hide, .hide * {
+    display: none; 
+    position: absolute;  
+}
+
 
 /*
 order projects based on duedate on home
-add form validation
 add confirm changes on enterkey pressed
 */
