--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,17 @@
+:root {
+    --darker: #324B4F;
+    --dark: #22818E;
+    --normal: #2BA9A6;
+    --ligth: #53D1B3;
+    --lighter: #8EF8B6;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     border: 0;
+    color: inherit;
 }
 
 button, img, input[type='checkbox'], select, option {
@@ -17,16 +26,49 @@ input::-webkit-calendar-picker-indicator {
     cursor: pointer;
 }
 
+img {
+    width: min(25px, 100%);
+    height: min(25px, 100%);
+}
+
+.hide, .hide * {
+    display: none !important; 
+    position: absolute;  
+}
+
 body {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 3fr;
 }
 
+@media (max-width: 800px) {
+    body {
+        display: block;
+    }
+}
+
+header {
+    height: 10vh;
+    grid-column: 1/3;
+    font-size: 8vh;
+    text-align: center;
+    font-weight: bold;
+    background-color: var(--dark);
+    color: white;
+}
+
+/*Sidebar*/
 #sidebar {
     display: grid;
     padding: 10%;
     gap: 10px;
+    background-color: var(--normal);
+    color: white;
+}
+
+#sidebar * {
+    color: white;
 }
 
 #sidebar > button {
@@ -36,6 +78,8 @@ body {
     font-size: large;
     font-weight: bold;
     height: 50px;
+    background-color: inherit;
+    border-radius: 5px;
 }
 
 #sidebar > h3 {
@@ -49,46 +93,53 @@ body {
     grid-template-rows: 1fr 1fr;
     height: 50px;
     width: 100%;
+    border-radius: 5px;
 }
 
 .project div {
     width: 125%;
 }
 
-.project button:first-child, .project div input:first-child {
-    text-align: left;
+.project button:first-child, .project input:first-child {
     padding-left: 10px;
     grid-row: 1/3;
-    width: 100%;
     overflow-x: auto;
     font-size: large;
     font-weight: bold;
+    background-color: inherit;
+    justify-content: flex-start;
+    border-radius: 5px;
 }
 
-.project .edit, .project .delete, .project div button {
+.project button {
     display: flex;
     justify-content: center;
     box-sizing: border-box;
+    background-color: inherit;
+    align-items: center;
 }
 
-img {
-    width: min(25px, 100%);
-    height: min(25px, 100%);
+#sidebar #add-project {
+    color: rgb(255 255 255 / 30%);;
 }
 
-#add-project {
-    font-weight: normal;
+#sidebar #add-project:hover {
+    color: rgb(255 255 255 );
 }
 
-button:hover {
+#sidebar button:hover, #sidebar .current, #display button:hover {
     background-color: rgb(0 0 0 / 30%);
 }
+
+/*Display*/
 
 #display {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 30px 20px;
+    background-color: var(--ligth);
+    color: var(--darker);
 }
 
 #display h3 {
@@ -97,19 +148,30 @@ button:hover {
     padding: 20px;
     font-size: xx-large;
     font-weight: bold;
+    border-radius: 5px;
 }
 
 .todo {
     display: flex;
-    border: 1px solid;
     height: max-content;
     gap: 1rem;
     padding: 2px 1rem;
     align-items: center;
+    background-color: var(--lighter);
+    border-radius: 5px;
+}
+
+.todo.checked, .todo.checked>.buttons {
+    background-color: rgb(0 0 0 / 40%) !important;  
+}
+
+.todo.checked>.buttons button {
+    background-color: transparent;
 }
 
 .todo .buttons {
     position: relative;
+    border-radius: 5px;
 }
 
 .todo .name {
@@ -119,11 +181,14 @@ button:hover {
 .todo button {
     width: fit-content;
     margin-left: 4px;
+    background-color: inherit;
 }
 
 .todo .date {
     margin-left: auto;
 }
+
+/*Forms*/
 
 #move-form {
     position: absolute;
@@ -136,6 +201,8 @@ button:hover {
     width: 15vw;
     max-height: 50vh;
     overflow-y: auto;
+    background-color: var(--lighter);
+    border-radius: 5px;
 }
 
 #move-form * {
@@ -146,14 +213,24 @@ button:hover {
     text-align: left;
     padding-left: 3px;
     margin-left: 0;
+    border-radius: 5px;
+}
+
+#move-form .current {
+    background-color: var(--normal);
+}
+
+#move-form button:hover {
+    background-color: var(--normal); 
 }
 
 form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
-    border: 1px solid black;
     gap: 5px;
+    background-color: var(--lighter);
+    border-radius: 5px;
 }
 
 #new-todo {
@@ -165,6 +242,14 @@ form div {
     flex-direction: column-reverse;
     padding: 2px;
     gap: 4px;
+}
+
+form input[type='text'] {
+    height: 20px;
+}
+
+form input, form textarea {
+    border-radius: 5px;
 }
 
 #description-div {
@@ -185,6 +270,7 @@ form .buttons {
 
 form .buttons button {
     margin-left: 0;
+    background-color: inherit;
 }
 
 label {
@@ -193,6 +279,7 @@ label {
 
 #priority {
     height: 100%;
+    background-color: inherit;
 }
 
 .instructions {
@@ -205,6 +292,13 @@ label {
     padding-left: 1rem;
     font-size: larger;
     font-weight: bolder;
+    color: rgb(142 248 182 / 80%);
+    background-color: inherit;
+    border-radius: 5px;
+}
+
+#add-todo:hover {
+    color: rgb(142 248 182 );
 }
 
 #add-todo::after {
@@ -212,12 +306,6 @@ label {
     content: '  Add todo';
     font-weight: normal;
 }
-
-.hide, .hide * {
-    display: none; 
-    position: absolute;  
-}
-
 
 /*
 order projects based on duedate on home
